--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,19 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-$color_greenLite:  rgb(62, 209, 185);
-$color_greyLite: whitesmoke;
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.display{
-    display: flex;
-    flex-direction: row;
-}
+@import "./variables.scss";
 .head_div{
     display: flex;
     flex-direction: column;
@@ -35,9 +20,10 @@ justify-content: space-between;
     }
         &_left > h2{
             padding-bottom: 1px;
-            color: white;
-            letter-spacing: 2px;
-            font-size: 35px
+            // color: white;
+            // letter-spacing: 2px;
+            // font-size: 35px
+            @include letterStyle(35px,2px , $color_white)
             
         }
         &_list{
@@ -157,7 +143,7 @@ justify-content: space-between;
         padding-left: 15px;
         height:50px ;
         width: 120px;
-        border-radius: 30%;
+        border-radius: 30px;
         color:red ;
         align-items: center;
         background-color: rgb(68, 39, 177);
@@ -165,9 +151,10 @@ justify-content: space-between;
     }
     &_btn > a{
         text-decoration: none;
-        color: aliceblue;
-        letter-spacing: 1px;
-        font-size: 20px;
+        // color: aliceblue;
+        // letter-spacing: 1px;
+        // font-size: 20px;
+        @include letterStyle(20px,1px,aliceblue)
         
     }
     &_btn:hover{
@@ -175,107 +162,3 @@ justify-content: space-between;
         
     }
 }
-.description{
-    @extend .display;
-    &_main{
-        @extend .display;
-        justify-content:space-between;
-        gap: 20px;
-        margin-top: 60px;
-        padding-left: 15rem;
-        padding-bottom: 50px;
-    }
-    &_image > img{
-        padding-top: 5rem;
-        padding-left:5rem;
-        width: 700px;
-        height: 500px;
-        object-fit: cover;
-        border-radius:20px;
-    }
-    &_info{
-        display: flex;
-        flex-direction: column;
-        &_top{
-            @extend .display;
-            justify-content: center;
-            align-items: center;
-            gap: 40px;
-            background-color: rgb(30, 145, 106);
-            height: 190px;
-            width: 640px;
-            border-radius: 10px;
-            margin-top: 85px;
-            padding-left: 15rem;
-            padding-right: 2rem;
-            
-        }
-        &_top > img{
-            width: 70px;
-            height: 70px;
-            object-fit: cover;
-            border-radius:100px;
-        }
-        &_top > h2{
-            font-size: 30px;
-            color: azure;
-        }
-        &_bottom{
-            color: darkgray;
-            letter-spacing: 2px;
-            font-size: 20px;
-            width: 700px;
-            height: 100px;
-        }
-        &_bottom > h2{
-            color: black;
-            text-align: left;
-            font-size: 40px;
-            margin-bottom: 10 0px;
-        }
-       
-    }
- 
-}
-.about{
-    padding-top: 150px;
-    background-color: $color_greyLite;
-    height: 600px;
-    &_data{
-        @extend .display;
-        justify-content: center;
-    }
-    &_table {
-        border: 1px solid rgb(206, 206, 206);
-        width: 25%;
-        height: 250px;
-        border-radius: 20px;
-        line-height: 45px;
-        &_name > h2{
-            border-bottom: 1px solid rgb(206, 206, 206);
-            font-size: 40px;
-            padding-left: 10px;
-        }
-        &_list{
-            padding-left: 35px;
-            margin: auto;
-            border-right: 1px solid rgb(206, 206, 206)
-        }
-        &_fon{
-            background-color:rgb(206, 206, 206) ;
-        }
-        &_green{
-            color: rgb(20, 173, 97);
-            
-        }
-    }
-    &_expereance{
-        width: 600px;
-        height: 600px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-}
-
-
